GPencil: Copying keys doesn't preserve Keyframe Type #94903

Closed
opened 2022-01-14 12:50:10 +07:00 by adam · 7 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 750/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557

Short description of error
When copying a keyframe to another layer, it doesn't keep the Keyframe Type, and defaults to a normal keyframe type.
e.g. Copying an Extreme key turns it into a regular keyframe.
Ref: Similar to this merge-layer fix: https://developer.blender.org/rBSe8684eff301d09e25b4e7ef6221a5289661da2e3
copy type.jpg

Exact steps for others to reproduce the error
Create 2 layers.
Set Keyframe Type on layer 1 to Extreme/Breakdown/Jitter/Hold.
Copy/paste key(s) into second layer, it reverts to default keyframe.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 750/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` **Short description of error** When copying a keyframe to another layer, it doesn't keep the Keyframe Type, and defaults to a normal keyframe type. e.g. Copying an Extreme key turns it into a regular keyframe. Ref: Similar to this merge-layer fix: https://developer.blender.org/rBSe8684eff301d09e25b4e7ef6221a5289661da2e3 ![copy type.jpg](https://archive.blender.org/developer/F12805131/copy_type.jpg) **Exact steps for others to reproduce the error** Create 2 layers. Set Keyframe Type on layer 1 to Extreme/Breakdown/Jitter/Hold. Copy/paste key(s) into second layer, it reverts to default keyframe.

Added subscriber: @adm

Added subscriber: @adm

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2022-01-14 13:04:13 +07:00

This issue was referenced by 05ca297596

This issue was referenced by 05ca297596a8988fc4137017a9777a32ee04f48c

This issue was referenced by 4cd881c70f

This issue was referenced by 4cd881c70f2e325ad30316dfbf5b32d22ba9da3b

This issue was referenced by d7a1fc0868

This issue was referenced by d7a1fc0868f17f2652311488dcfe39946eef134b

This issue was referenced by 86b7746e3c

This issue was referenced by 86b7746e3c31f55425016ade1ec5cee05fdfcb05

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94903
There is no content yet.