Fix T94903: GPencil: Copying keys doesn't preserve Keyframe Type

When a new frame is created, ensure the keytype of source key is used.