source/blender/editors/gpencil/editaction_gpencil.c
@@ -452,6 +452,8 @@ bool ED_gpencil_anim_copybuf_paste(bAnimContext *ac, const short offset_mode)
 
       /* get frame to copy data into (if no frame returned, then just ignore) */
       gpf = BKE_gpencil_layer_frame_get(gpld, gpfs->framenum, GP_GETFRAME_ADD_NEW);
+      /* Ensure to use same keyframe type. */
+      gpf->key_type = gpfs->key_type;
       if (gpf) {
         bGPDstroke *gps, *gpsn;
 
